--- a/frontend/tech-jobs-fair-challenge-team6/src/index.css
+++ b/frontend/tech-jobs-fair-challenge-team6/src/index.css
@@ -15,3 +15,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.contact-info {
+  width: 100%;
+  text-align: center;
+}
+
+.contact-info h4 {
+  font-size: large;
+}
+
+.contact-info td {
+  width: 100%;
+  margin-bottom: 24px;
+  padding: 20px;
+}
+
+.contact-info label {
+  font-weight: bold;
+}
+
+.contact-info span {
+  color: rgba(0, 0, 0, 0.45);
+}
