--- a/frontend/tech-jobs-fair-challenge-team6/src/index.css
+++ b/frontend/tech-jobs-fair-challenge-team6/src/index.css
@@ -25,9 +25,12 @@ code {
   font-size: large;
 }
 
+.contact-info .content {
+  display: flex;
+  flex-direction: column;
+}
+
 .contact-info td {
-  width: 100%;
-  margin-bottom: 24px;
   padding: 20px;
 }
 
